--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Alura Plus</title>
+    <title>site</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -15,17 +15,17 @@
 <body>
     <section class="principal container">
         <div class="container__caixa">
-            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
-                único.</h1>
-            <img src="./img/tendenciaslojaderoupa.jpeg" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
-            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
-            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            <h1 class="container__titulo"> Roupas infantil de todos os tamanhos com estampas de personagens
+             </h1>
+            <img src="./img/images.jpeg" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
+            <a href="www.alura.com.br" class="container__botao">Parcele por até 8x sem juros*</a>
+            <a href="www.alura.com.br" class="container__botao botao_secundario">comprar</a>
+            <p class="container__aviso">*parcele em boletos ou cartão de crédito sem pagar juros</p>
         </div>
     </section>
 
     <section class="container secundario">
-        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <img src="./img/Como-fazer-bolo-1.jpg" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Assista do seu jeito</h2>
             <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
@@ -41,12 +41,13 @@
             </p>
             <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
         </div>
-        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+        <img src="img/aprenda-a-fazer-o-bolo-tendencia-do-instagram-bento-cake-publi-arno-capa-20210929140742.jpg"Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
-        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
-            class="secundario__imagem">
+        <img src="img/images (1).jpeg" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        class="fantasia"
+        class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
             <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
