--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>site</title>
+    <title>confeitaria</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
@@ -15,94 +15,90 @@
 <body>
     <section class="principal container">
         <div class="container__caixa">
-            <h1 class="container__titulo"> Roupas infantil de todos os tamanhos com estampas de personagens
+            <h1 class="container__titulo"> Doce encantado
              </h1>
             <img src="./img/images.jpeg" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
-            <a href="www.alura.com.br" class="container__botao">Parcele por até 8x sem juros*</a>
+            <a href="www.alura.com.br" class="container__botao">Faça sua encomenda</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">comprar</a>
-            <p class="container__aviso">*parcele em boletos ou cartão de crédito sem pagar juros</p>
+            <p class="container__aviso">Aceitamos cartão de crédito, debito e pix
+                chave pix: 578.789.456-11
+            </p>
         </div>
     </section>
 
     <section class="container secundario">
         <img src="./img/Como-fazer-bolo-1.jpg" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
-                aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            <h2 class="descricao__titulo"> Bolos com frutas</h2>
+            <p class="descricao__texto">Bolos feitos e decorados com frutas frescas</p>
         </div>
     </section>
 
     <section class="container secundario">
         <div class="container__descricao">
             <p class="descricao__texto">
-                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
-                tecnologia e aprender inglês ou espanhol, onde e como quiser.
+                Fui atrás da felicidade e voltei com um bolo no pote!
             </p>
-            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+            <a href="www.alura.com.br" class="container__botao secundario__botao" container> Mini bolos</a>
         </div>
         <img src="img/aprenda-a-fazer-o-bolo-tendencia-do-instagram-bento-cake-publi-arno-capa-20210929140742.jpg"Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
-        <img src="img/images (1).jpeg" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        <img src="img/29853d75b72b5a2e20000a3a408cb31f1446425f.jpg" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
         class="fantasia"
         class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
-                você, até mesmo sem internet.</p>
+            <h2 class="descricao__titulo">Bolos de aniversário</h2>
+            <p class="descricao__texto"> Personalize seus bolos, uma ótima opção de presente!</p>
         </div>
     </section>
     
     <section class="dispositivos">
-        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <h2 class="dispositivos__titulo">Temos bolos disponíveis a pronta entrega.</h2>
         <ul class="dispositivos__lista">
             <li>
-                <img src="img/tv.png" alt="Ícone de televisão">
-                <h3 class="lista__item">TV</h3>
+                <img src="img" alt="">
+                <h3 class="lista__item"></h3>
             </li>
             <li>
-                <img src="img/computador.png" alt="Ícone de computador">
-                <h3 class="lista__item">Computador</h3>
+                <img src="" alt="">
+                <h3 class="lista__item"></h3>
             </li>
             <li>
-                <img src="img/bokaloka.png" alt="Ícone de celular">
-                <h3 class="lista__item">Celular</h3>
+                <img src="" alt="">
+                <h3 class="lista__item"></h3>
             </li>
         </ul>
     </section>
 
     <footer class="rodape">
-        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <img src="img/Logo.png" alt="" class="rodape__logo">
         <ul class="rodape__lista">
             <li class="lista__link">
-                <a href="#">Idioma</a>
+                <a href="#">Bolos</a>
             </li>
             <li class="lista__link">
-                <a href="#">Dispositivos compatíveis</a>
+                <a href="#">Personalizamos</a>
             </li>
             <li class="lista__link">
-                <a href="#">Contrato de assinatura</a>
+                <a href="#">Mini bolos</a>
             </li>
             <li class="lista__link">
-                <a href="#">Politica de privacidade</a>
+                <a href="#">Frutas frescas</a>
             </li>
             <li class="lista__link">
-                <a href="#">Proteção de dados no Brasil</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Anuncios personalizados</a>
+                <a href="#"></a>
             </li>
             <li class="lista__link">
-                <a href="#">Ajuda</a>
+                <a href="#"></a>
             </li>
         </ul>
-        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
-            assinatura paga. Conteúdo sujeito a disponibilidade.</p>
-        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
-            serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
-            Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+        <p class="rodape__texto">“Para você que vive pensando em política, queria dizer que o meu bolo é um ótimo partido.”</p>
+        <p class="rodape__texto"> Rua Chico Coins, 1457 - Liberdade, Prudentópolis - PR, Brasil </p>
     </footer>
 </body>
 
